[gd_scene load_steps=12 format=3 uid="uid://d17rqwirmadct"]

[ext_resource type="Script" uid="uid://itdilemo6y0w" path="res://scripts/card.gd" id="1_yiag5"]
[ext_resource type="Texture2D" uid="uid://ccha33rgqr6rw" path="res://images/Zback.png" id="2_4dx8l"]
[ext_resource type="Script" uid="uid://dq8r8q6dg5ju3" path="res://states/StateMachine.gd" id="2_tgmmg"]
[ext_resource type="Script" uid="uid://dalcj6ww1srnh" path="res://states/Dragging_Card.gd" id="4_40ytf"]
[ext_resource type="Script" uid="uid://cnq5o54acf58m" path="res://states/Idle_Card.gd" id="4_qf083"]
[ext_resource type="Script" uid="uid://21vi5i0p5fbg" path="res://states/Going_Home_Card.gd" id="6_5273u"]
[ext_resource type="Script" uid="uid://gv6bsp53e4s2" path="res://states/On_Release_Card.gd" id="7_qbjcq"]
[ext_resource type="Script" uid="uid://crnn1y5x7khw3" path="res://scripts/test.gd" id="8_dqwud"]
[ext_resource type="Script" uid="uid://3w4o281vu7wf" path="res://states/Discarded_Card.gd" id="8_hddve"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4dx8l"]
size = Vector2(20, 28.0952)

[sub_resource type="LabelSettings" id="LabelSettings_dqwud"]
font_size = 10

[node name="Card" type="Node2D"]
z_index = 2
script = ExtResource("1_yiag5")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_4dx8l")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(4.2, 4.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2.04359e-06)
scale = Vector2(1.225, 1.225)
shape = SubResource("RectangleShape2D_4dx8l")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_tgmmg")
initial_state = NodePath("Idle_Card")

[node name="Dragging_Card" type="Node" parent="StateMachine" node_paths=PackedStringArray("Card")]
script = ExtResource("4_40ytf")
Card = NodePath("../..")
metadata/_custom_type_script = "uid://dalcj6ww1srnh"

[node name="Idle_Card" type="Node" parent="StateMachine" node_paths=PackedStringArray("Card")]
script = ExtResource("4_qf083")
Card = NodePath("../..")
metadata/_custom_type_script = "uid://cnq5o54acf58m"

[node name="Going_Home_Card" type="Node" parent="StateMachine" node_paths=PackedStringArray("Card")]
script = ExtResource("6_5273u")
Card = NodePath("../..")
metadata/_custom_type_script = "uid://21vi5i0p5fbg"

[node name="On_Release_Card" type="Node" parent="StateMachine" node_paths=PackedStringArray("Card")]
script = ExtResource("7_qbjcq")
Card = NodePath("../..")
metadata/_custom_type_script = "uid://gv6bsp53e4s2"

[node name="Discarded_Card" type="Node" parent="StateMachine"]
script = ExtResource("8_hddve")
metadata/_custom_type_script = "uid://3w4o281vu7wf"

[node name="Label" type="Label" parent="."]
offset_left = -60.0
offset_top = 75.0
offset_right = -20.0
offset_bottom = 98.0
label_settings = SubResource("LabelSettings_dqwud")
script = ExtResource("8_dqwud")

[connection signal="input_event" from="Area2D" to="StateMachine/Idle_Card" method="_on_area_2d_input_event"]
